Mutes the crash in ImeMenuTray when the ash is not in browser process.

Bug: 867084
Change-Id: I1a667b8c54d8f111dbe00a2b398fb99f1527aa0b
Reviewed-on: https://chromium-review.googlesource.com/1157741
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580036}
Former-commit-id: 86c0c539a6b7a1d5340bb763271a94bccd5d17cb